tests/ui/postgres/wrong_param_type.stderr
error[E0308]: mismatched types
 --> $DIR/wrong_param_type.rs:2:18
  |
2 |     let _query = sqlx::query!("select $1::text", 0i32);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `i32`
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/wrong_param_type.rs:4:18
  |
4 |     let _query = sqlx::query!("select $1::text", &0i32);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `str`, found `i32`
  |
  = note: expected reference `&str`
             found reference `&i32`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/wrong_param_type.rs:6:18
  |
6 |     let _query = sqlx::query!("select $1::text", Some(0i32));
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `i32`
  |
  = note: expected enum `std::option::Option<&str>`
             found enum `std::option::Option<i32>`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/wrong_param_type.rs:9:18
  |
9 |     let _query = sqlx::query!("select $1::text", arg);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `i32`
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/wrong_param_type.rs:12:18
   |
12 |     let _query = sqlx::query!("select $1::text", arg);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `i32`
   |
   = note: expected enum `std::option::Option<&str>`
              found enum `std::option::Option<i32>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/wrong_param_type.rs:13:18
   |
13 |     let _query = sqlx::query!("select $1::text", arg.as_ref());
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `str`, found `i32`
   |
   = note: expected enum `std::option::Option<&str>`
              found enum `std::option::Option<&i32>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
